2020-12-16  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (main): fixed the regex for the proxy cleanup for s_client

2020-12-15  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (require_s_client_option): Checks if s_client supports the -no_ssl[23] options
	* check_ssl_cert (main): Better filtering of the nmap output

2020-12-11  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Corrected the handling of the issuer URI

2020-12-01  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Correct handling of -proxy by s_client and --proxy by cURL

2020-11-30  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (create_temporary_file): bug fix: temp directory not used
	* check_ssl_cert: patch for the --element option
	* check_ssl_cert: bug fix: force -4 or -6 with cURL when specified

2020-08-07  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Fixed a bug with the output of --version

2020-07-24  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (check_attr): Fixed a bug in the output with --not-issued-by

2020-07-02  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (fetch_certificate): MySQL support

2020-07-01  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Adding support for better file(1) certificate parsing

2020-06-12  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (main): Fixed a problem on BSD in the processing of the issuers
	* check_ssl_cert (debuglog): [DBG] prefix for all the lines

2020-06-09  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: fixed a bug in the output (expiration date of chain elements)

2020-06-05  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (fetch_certificate): support for s_client -proxy option

2020-06-04  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Processes all the certificates in the chain
	* check_ssl_cert: New option to check that the issuer does not match a given pattern

2020-05-18  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Propagates the -6 switch to nmap
