@@ -1,0 +1,20 @@
+-----BEGIN CERTIFICATE-----
+MIIDMzCCAhugAwIBAgIJANtVCnAolv4dMA0GCSqGSIb3DQEBDQUAMH4xCzAJBgNV
+BAYTAkRFMRswGQYDVQQIDBJCYWRlbi1XdWVydHRlbWJlcmcxEjAQBgNVBAcMCVN0
+dXR0Z2FydDEcMBoGA1UECgwTLi4udW5kIHVlYmVyaGF1cHQhPzEPMA0GA1UECwwG
+dXVlIENBMQ8wDQYDVQQDDAZ1dWUgQ0EwHhcNMjAxMjIwMTYyNTM1WhcNMjExMjIw
+MTYyNTM1WjAAMIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAnvlsqMXz
+GDKdN0bochMAPx2/XTKxP4q8dsHqLnGGZ+VoNYecvJ/rXhvvWC9eeOknKZwaXe/H
+tOyITCc/L/4lx0krlCGcLH7AkVijlrgZeWbE/Ia/OUPlHYiVcXV0Pw8Hzy/+JdU/
+BPkuCcxZhdwhB3k61HSdg8wAc/aJom9RveoI0dCweoeq7lHz5jv5Azjq5mK2rriB
+4vMVTzzbLVAAQ451KrAkBNKaH+1Bvyn1S5SpMA+K4HnleBIGsc5ZnY03N2EAZq5h
+NczSBpdwZRkCxDXHpv6F4FIF7RJwCqgCpPRPsVuSr/KXFRnsSxhQCDiB4i3dEAwn
+iXJVHfHEmTe0UwIDAQABozIwMDAJBgNVHRMEAjAAMAsGA1UdDwQEAwIFoDAWBgNV
+HREEDzANggt3d3cudXVlLm9yZzANBgkqhkiG9w0BAQ0FAAOCAQEAdv5Z9KMWcItp
+0ZsJlYEHmuHbw+lXvKzz11mY//D4HXSXthltc5dSW9wUJMWYiOJc8IoQnOOXo9Tx
+Ye8JvK6gOhOE8RELPr0e4jmIBCYq02bMh6v82EoN0gzI4ZgTfkLYZtVSGhUHYA8K
+0gsPUz88VmVLrcz/EhOhbLuxmgUJWjE3z48zD/QO6TQRjVtwql5Qc2iBq9ZnCNgZ
+pf8r+/m561xMN5r3Jvp0+0xDM0gM5LigdObguUBzAhWExuHXHubcC0ovppSA5Qey
+uoalFu8pQXRTSZ9tatP7mYERciMtW+fK/MDbMNNVMcDgQoOtPna1zDFgqyEygLXy
+xZGfiGQBgw==
+-----END CERTIFICATE-----
